--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,9 @@
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
+  <!-- Google Sign-in -->
+  <meta name="google-signin-client_id" content="707347012167-9r0bgneci7vc78ut8i0don03ujuseh4q.apps.googleusercontent.com">
+
   <title>bcpbooster</title>
   <link rel="manifest" href="manifest.json">
 </head>
