--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
   <!-- Google Sign-in -->
   <meta name="google-signin-client_id" content="288409544617-k3v5fuhgvuhhbg893qngp4bg6tnpr7ld.apps.googleusercontent.com">
 
-  <title>bcpbooster</title>
+  <title>BCP Booster Club</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
