--- a/web/privacy/index.html
+++ b/web/privacy/index.html
@@ -2,8 +2,19 @@
 <head>
     <link rel="icon" href="favicon.png"/>
     <title>Privacy Policy</title>
+    <style>
+        iframe {
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            border: none;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-    <a href="https://www.iubenda.com/privacy-policy/15397328" class="iubenda-white iubenda-embed" title="Privacy Policy ">Privacy Policy</a>
-    <script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+    <iframe src="https://www.iubenda.com/privacy-policy/15397328"></iframe>
 </body>
